--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
+
 <html>
+    <head>
+
+    </head>
     <body>
-        Homework 1
+        <h1>Chi Tam Nguyen</h1>
+        <em>Intended Computer Science | 3rd year</em>
+        <p>Hello, I'm Tam and my pronouns are "he/him/his". I'm from Riverside county, Southern California. I have four sisters, three of whom are in America, and the other is in Vietnam. I'm a junior transfer from Mt. San Jacinto College and working on declaring Computer Science. During my free time, I usually hang out with friends, watch YouTube, and acoustic guitar.</p>
+        <ul>
+            <li>Super Duper Burgers</li>
+            <li>Foothill</li>
+            <li>Crossroads</li>
+        </ul>
+        <img src="assets/img/selfie.jpg" width="640" height="480"/>
+        <div>
+            <a href="https://www.berkeley.edu/">UC Berkeley</a>
+        </div>
+
+        <h1>Part 2: Reading Responses</h1>
+        <ul>
+            <li><strong>What is something you learned from this article?</strong> The first thing I learned is to pay attention to the apps I often use and figure out why the designers design them in specific ways. The second thing is to practice breaking down the app into smaller components, which will improve my design skills in the long run.</li>
+            <li><strong>What was your favorite part of this article?</strong> I particularly love the "Don't just use apps, study them" section. Although this section doesn't come with any graphics, its idea reminds me of where to start and how to become a better designer. Learning from existing products not only sharpens my technical skills but also helps me gradually come up with my own design.</li>
+            <li><strong>Copy and paste a quote you found compelling, interesting, or cool.</strong> "You develop your design eye by thinking as if you were the designer of a product" (Kathleen Warner)</li>
+            <li><strong>On a scale from 1 to 10, how much did you enjoy reading this article? If you scored below a five, please briefly explain why.</strong> I score this one 9 out of 10. Even though it doesn't mention many technical concepts, its idea opened my eye to a great extent.</li>
+        </ul>
     </body>
 </html>
+
