--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<!-- PROBLEM 0:
+		Link the CSS stylesheet called style.css found in the assets/css folder -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/initial.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+	<div id="content">
+		<div id="navbar">
+			<div class="navbar-item">Home</div>
+			<div class="navbar-item">Discover</div>
+			<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic"><img src="./assets/img/profile.png"/></div>
+			<div id="information">
+				<div id="username">Chi Tam Nguyen</div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					I'm a junior transfer at University of California, Berkeley. 
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item"><img src="./assets/img/san-francisco.jpg"/></div>
+				<div class="item"><img src="./assets/img/uc-berkeley.jpg"/></div>
+				<div class="item"><img src="./assets/img/botanical-garden.jpg"/></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="./assets/img/san-francisco-port.jpg"/></div>
+				<div class="item"><img src="./assets/img/park.jpg"/></div>
+				<div class="item"><img src="./assets/img/transportation.jpg"/></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="./assets/img/fish-house.jpg"/></div>
+				<div class="item"><img src="./assets/img/hamburger.png"/></div>
+				<div class="item"><img src="./assets/img/airport.jpg"/></div>
+			</div>
+		</div>
+	</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+	</body>
 </html>
