--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,6 +1,120 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        MIDTERM
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Chi Tam Nguyen">
+    <meta name="description" content="Berkeley Restaurant">
+
+    <!-- Import css -->
+    <link rel="stylesheet" type="text/css" href="assets/css/common.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/homepage.css">
+    <!-- Import fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    
+    <title>Gypsy's Trattoria Italiana</title>
+</head>
+<body>
+    <!-- Header section: logo, navigation bar  -->
+    <header>
+        <div id="header-frame">
+            <div id="logo-frame">
+                <img id="logo" src="./assets/img/logo.png" alt="Gypsy's Trattoria Italiana">
+            </div>
+            <div id="nav-bar-frame">
+                <ul id="nav-bar">
+                    <li class="nav-bar-item"><a href="" class="link active-link">Home</a></li>
+                    <li class="nav-bar-item"><a href="menu.html" class="link">Menu</a></li>
+                    <li class="nav-bar-item"><a href="testimonials.html" class="link">Testimonials</a></li>
+                    <li class="nav-bar-item"><a href="contact.html" class="link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main sections: intro, best dishes -->
+    <main>
+        <div id="intro-frame">
+            <img id="home-intro-img" src="./assets/img/home-intro-img.jpg" alt="Restaurant">
+            <div id="home-intro-msg-sm-frame" class="home-intro-msg-frame">
+                <p id="home-intro-msg-sm" class="home-intro-msg">Welcome To</p>
+            </div>
+            <div id="home-intro-msg-lg-frame" class="home-intro-msg-frame">
+                <p id="home-intro-msg-lg" class="home-intro-msg">Gypsy's Trattoria Italiana</p>
+            </div>
+        </div>
+        <div id="foreword-frame">
+            <p id="foreword-title" class="highlight-title">Why Choose Us?</p>
+            <p id="foreword-content">Voted "Best of Berkeley" for Best Italian Food, Gypsy's Trattoria Italiana offers gourmet Italian food in fast food style! Each plate can be customized by our customers since nothing is pre-made. Everything is made from scratch in the restaurant on a daily basis, including base sauces, stocks, and meatballs. Prices are low and affordable, ranging from $8.74 to $12.74. Come in or call in today to experience the best Italian food Berkeley has to offer at a reasonable price!</p>
+        </div>
+        <div id="customer-favorites-frame">
+            <p id="customer-favorites-title" class="highlight-title">Customer Favorites</p>
+            <div class="customer-favorites-row">
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/lasagna.jpg">
+                    </div>
+                </div>
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/pollo-pesto.jpg">
+                    </div>
+                </div>
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/ravioli-bolognese.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="customer-favorites-row">
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/frutti-di-mare.jpg">
+                    </div>
+                </div>
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/sandwich.jpg">
+                    </div>
+                </div>
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/gnocchi-marinara.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="customer-favorites-row">
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/tortellini-georgeo.jpg">
+                    </div>
+                </div>
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/calzone.jpg">
+                    </div>
+                </div>
+                <div class="dish-frame">
+                    <div class="dish">
+                        <img src="assets/img/greek-salad.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer: address and contact -->
+    <footer>
+        <div id="footer-frame">
+            <div id="address-frame">
+                <p class="contact">2519-A Durant Ave., Berkeley, CA 94704</p>
+                <p class="contact">Tel: 510 548 4860</p>
+                <p class="contact">Fax: 510 548 4875</p>
+                <p class="watermark copyright">© Copyright 2010 Gypsy's Trattoria Italiana</p>
+                <p class="watermark">Site designed by Chi Tam Nguyen</p>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
