--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -1,6 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        Lab 1
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 7</title>
+</head>
+<body>
+    <div>
+        <h1>Part 1</h1>
+    </div>
+
+    <div>
+        <h3>
+            1) Link:
+            <a href="https://nytimes.wd5.myworkdayjobs.com/Tech">https://nytimes.wd5.myworkdayjobs.com/Tech</a>
+        </h3>
+    </div>
+
+    <div>
+        <h3>
+            2) Font: nyt-cheltenham
+        </h3>
+    </div>
+
+    <div>
+        <h3>
+            3 & 4) Change three headings, Change logo
+        </h3>
+        <img src="./Part 1.png" alt="Fake News">
+        <br>
+        <br>
+    </div>
+
+    <div>
+        <h1>Part 2</h1>
+        <h3>
+            1, 2, 3, 4, 5 & 6) Code in console
+        </h3>
+        <img src="./Part 2.png" alt="Console Code">
+    </div>
+</body>
 </html>
