--- a/final/familytree.html
+++ b/final/familytree.html
@@ -63,22 +63,22 @@
 						</div>
 					</div>
 
-                    <div class="chart" id="collapsable-example"></div>
-                    <script src="./assets/js/treant/raphael.js"></script>
-                    <script src="./assets/js/treant/Treant.js"></script>
-                    <script src="./assets/js/treant/jquery.min.js"></script>
-                    <script src="./assets/js/treant/jquery.easing.js"></script>
-                    <script src="./assets/js/treant/collapsable.js"></script>
-                    <script>
-                        tree = new Treant(chart_config);
-                    </script>
+                    <div class="chart" id="dinosaur-family-tree"></div>
 				</div>
 			</div>
 		</div>
 
 		<script src="./assets/js/particles/particles.js"></script>
 		<script src="./assets/js/particles/app.js"></script>
+
+		<script src="./assets/js/treant/raphael.js"></script>
+		<script src="./assets/js/treant/Treant.js"></script>
+		<script src="./assets/js/treant/jquery.min.js"></script>
+		<script src="./assets/js/treant/jquery.easing.js"></script>
 		<script src="./assets/js/treant/collapsable.js"></script>
+		<script>
+			new Treant(chart_config);
+		</script>
 	</body>
 </html>
 
