--- a/final/familytree.html
+++ b/final/familytree.html
@@ -63,6 +63,7 @@
 						</div>
 					</div>
 
+					<img src="../assets/img/familytree/allosaurus.jpg"/>
                     <div class="chart" id="dinosaur-family-tree"></div>
 				</div>
 			</div>
