Fixed Some Bugs

--- a/final/index.html
+++ b/final/index.html
@@ -244,7 +244,7 @@
 										</button>
 										<button
 											id="carnotaurus-stop-btn"
-											class="voice-button"
+											class="voice-button stop-button"
 										>
 											Stop
 										</button>
@@ -425,7 +425,7 @@
 										</button>
 										<button
 											id="triceratops-stop-btn"
-											class="voice-button"
+											class="voice-button stop-button"
 										>
 											Stop
 										</button>
@@ -603,7 +603,7 @@
 										</button>
 										<button
 											id="stegosaurus-stop-btn"
-											class="voice-button"
+											class="voice-button stop-button"
 										>
 											Stop
 										</button>
@@ -823,7 +823,7 @@
 										</button>
 										<button
 											id="parasaurolophus-stop-btn"
-											class="voice-button"
+											class="voice-button stop-button"
 										>
 											Stop
 										</button>
@@ -907,7 +907,7 @@
 										Canadian province of Alberta and
 										described in 1922. Remains have also
 										been recovered in New Mexico and Utah in
-										the United States.
+										the United States."
 									</span>
 								</p>
 							</div>
@@ -1028,7 +1028,7 @@
 										</button>
 										<button
 											id="mosasaurus-stop-btn"
-											class="voice-button"
+											class="voice-button stop-button"
 										>
 											Stop
 										</button>
@@ -1078,7 +1078,7 @@
 										animals not only to open the mouth by
 										lowering the mandible but also to extend
 										the lower jaws sideways while feeding on
-										large prey.
+										large prey."
 									</span>
 								</p>
 							</div>
