--- a/final/index.html
+++ b/final/index.html
@@ -1094,7 +1094,7 @@
 		<script src="./assets/js/particles/app.js"></script>
 
 		<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-		<script src="./assets/js/swiper/app.js"></script>
+		<script src="./assets/js/swiper/main.js"></script>
 		<script src="./assets/js/scroll/scroll.js"></script>
 		<script src="./assets/js/voice/app.js"></script>
 	</body>
